--- a/src/index.html
+++ b/src/index.html
@@ -193,51 +193,102 @@
                 <p class="text-white">Movies</p>
               </div>
             </div>
-            <div class="row section-body p-2">
+            <div class="row section-body section-movies px-2">
               <div class="col-md-4">
-                <h2>Section Movies</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                <div class="card movie-item movie-0">
+                  <div class="card-body movie-item-text-section text-white">
+                    <p class="card-title">A Feast With King Midas</p>
+                    <p class="card-text">Timo Wright</p>
+                  </div>
+                </div>
               </div>
               <div class="col-md-4">
-                <h2>Section Movies</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                <div class="card movie-item movie-1">
+                  <div class="card-body movie-item-text-section text-white">
+                    <p class="card-title">Ja Passou</p>
+                    <p class="card-text">Sebastião Salgado, Pedro Patrocínio</p>
+                  </div>
+                </div>
               </div>
               <div class="col-md-4">
-                <h2>Section Movies</h2>
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                <div class="card movie-item movie-2">
+                  <div class="card-body movie-item-text-section text-white">
+                    <p class="card-title">No Necesito</p>
+                    <p class="card-text">Victoria Garza</p>
+                  </div>
+                </div>
               </div>
               <div class="col-md-4">
-                <h2>Section Movies</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                <div class="card movie-item movie-3">
+                  <div class="card-body movie-item-text-section text-white">
+                    <p class="card-title">#MyEscape</p>
+                    <p class="card-text">Elke Sasse</p>
+                  </div>
+                </div>
               </div>
               <div class="col-md-4">
-                <h2>Section Movies</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                <div class="card movie-item movie-4">
+                  <div class="card-body movie-item-text-section text-white">
+                    <p class="card-title">2.57k</p>
+                    <p class="card-text">Amber Borotsik, Tony Olivares</p>
+                  </div>
+                </div>
               </div>
               <div class="col-md-4">
-                <h2>Section Movies</h2>
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                <div class="card movie-item movie-5">
+                  <div class="card-body movie-item-text-section text-white">
+                    <p class="card-title">3orthographies</p>
+                    <p class="card-text">Dominik Pagacz</p>
+                  </div>
+                </div>
               </div>
               <div class="col-md-4">
-                <h2>Section Movies</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                <div class="card movie-item movie-6">
+                  <div class="card-body movie-item-text-section text-white">
+                    <p class="card-title">A Big Love</p>
+                    <p class="card-text">Simona Rapello and Max Chicco</p>
+                  </div>
+                </div>
               </div>
               <div class="col-md-4">
-                <h2>Section Movies</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                <div class="card movie-item movie-7">
+                  <div class="card-body movie-item-text-section text-white">
+                    <p class="card-title">A Bomb (Une Bombe)</p>
+                    <p class="card-text">Guillaume Harvey</p>
+                  </div>
+                </div>
               </div>
               <div class="col-md-4">
-                <h2>Section Movies</h2>
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                <div class="card movie-item movie-8">
+                  <div class="card-body movie-item-text-section text-white">
+                    <p class="card-title">A Circus Tale & A Love Song</p>
+                    <p class="card-text">Demián Bichir</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="card movie-item movie-9">
+                  <div class="card-body movie-item-text-section text-white">
+                    <p class="card-title">A Done Deal</p>
+                    <p class="card-text">Pierre-Marc Drouin & Simon Lamarre-Ledoux</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="card movie-item movie-10">
+                  <div class="card-body movie-item-text-section text-white">
+                    <p class="card-title">A Hard World for Little Things</p>
+                    <p class="card-text">Sonja Bertucci</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="card movie-item movie-11">
+                  <div class="card-body movie-item-text-section text-white">
+                    <p class="card-title">A Loft in Paradise (Un loft au Paradis)</p>
+                    <p class="card-text">Alexandre Lança</p>
+                  </div>
+                </div>
               </div>
             </div>
             <a name="schedule" type="hidden" class="section-anchor d-block mb-5"></a>
