--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
               <a class="nav-link mw-100" href="#artists">Artists</a>
             </li>
             <li class="mw-100">
-              <a class="nav-link mw-100" href="#movies">Movies</a>
+              <a class="nav-link mw-100" href="#films">Films</a>
             </li>
             <li class="mw-100">
               <a class="nav-link mw-100" href="#schedule">Schedule</a>
@@ -68,7 +68,7 @@
                 <a class="nav-link" href="#artists">Artists</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#movies">Movies</a>
+                <a class="nav-link" href="#films">Films</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#schedule">Schedule</a>
@@ -187,104 +187,104 @@
                 </div>
               </div>
             </div>
-            <a name="movies" type="hidden" class="section-anchor d-block mb-5"></a>
-            <div class="row section-header section-header-right section-movies">
+            <a name="films" type="hidden" class="section-anchor d-block mb-5"></a>
+            <div class="row section-header section-header-right section-films">
               <div class="col col-md-10 shadow-lg">
-                <p class="text-white">Movies</p>
+                <p class="text-white">Films</p>
               </div>
             </div>
-            <div class="row section-body section-movies px-2">
+            <div class="row section-body section-films px-2">
               <div class="col-md-4">
-                <div class="card movie-item movie-0">
-                  <div class="card-body movie-item-text-section text-white">
+                <div class="card film-item film-0">
+                  <div class="card-body film-item-text-section text-white">
                     <p class="card-title">A Feast With King Midas</p>
                     <p class="card-text">Timo Wright</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-4">
-                <div class="card movie-item movie-1">
-                  <div class="card-body movie-item-text-section text-white">
+                <div class="card film-item film-1">
+                  <div class="card-body film-item-text-section text-white">
                     <p class="card-title">Ja Passou</p>
                     <p class="card-text">Sebastião Salgado, Pedro Patrocínio</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-4">
-                <div class="card movie-item movie-2">
-                  <div class="card-body movie-item-text-section text-white">
+                <div class="card film-item film-2">
+                  <div class="card-body film-item-text-section text-white">
                     <p class="card-title">No Necesito</p>
                     <p class="card-text">Victoria Garza</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-4">
-                <div class="card movie-item movie-3">
-                  <div class="card-body movie-item-text-section text-white">
+                <div class="card film-item film-3">
+                  <div class="card-body film-item-text-section text-white">
                     <p class="card-title">#MyEscape</p>
                     <p class="card-text">Elke Sasse</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-4">
-                <div class="card movie-item movie-4">
-                  <div class="card-body movie-item-text-section text-white">
+                <div class="card film-item film-4">
+                  <div class="card-body film-item-text-section text-white">
                     <p class="card-title">2.57k</p>
                     <p class="card-text">Amber Borotsik, Tony Olivares</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-4">
-                <div class="card movie-item movie-5">
-                  <div class="card-body movie-item-text-section text-white">
+                <div class="card film-item film-5">
+                  <div class="card-body film-item-text-section text-white">
                     <p class="card-title">3orthographies</p>
                     <p class="card-text">Dominik Pagacz</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-4">
-                <div class="card movie-item movie-6">
-                  <div class="card-body movie-item-text-section text-white">
+                <div class="card film-item film-6">
+                  <div class="card-body film-item-text-section text-white">
                     <p class="card-title">A Big Love</p>
                     <p class="card-text">Simona Rapello and Max Chicco</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-4">
-                <div class="card movie-item movie-7">
-                  <div class="card-body movie-item-text-section text-white">
+                <div class="card film-item film-7">
+                  <div class="card-body film-item-text-section text-white">
                     <p class="card-title">A Bomb (Une Bombe)</p>
                     <p class="card-text">Guillaume Harvey</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-4">
-                <div class="card movie-item movie-8">
-                  <div class="card-body movie-item-text-section text-white">
+                <div class="card film-item film-8">
+                  <div class="card-body film-item-text-section text-white">
                     <p class="card-title">A Circus Tale & A Love Song</p>
                     <p class="card-text">Demián Bichir</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-4">
-                <div class="card movie-item movie-9">
-                  <div class="card-body movie-item-text-section text-white">
+                <div class="card film-item film-9">
+                  <div class="card-body film-item-text-section text-white">
                     <p class="card-title">A Done Deal</p>
                     <p class="card-text">Pierre-Marc Drouin & Simon Lamarre-Ledoux</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-4">
-                <div class="card movie-item movie-10">
-                  <div class="card-body movie-item-text-section text-white">
+                <div class="card film-item film-10">
+                  <div class="card-body film-item-text-section text-white">
                     <p class="card-title">A Hard World for Little Things</p>
                     <p class="card-text">Sonja Bertucci</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-4">
-                <div class="card movie-item movie-11">
-                  <div class="card-body movie-item-text-section text-white">
+                <div class="card film-item film-11">
+                  <div class="card-body film-item-text-section text-white">
                     <p class="card-title">A Loft in Paradise (Un loft au Paradis)</p>
                     <p class="card-text">Alexandre Lança</p>
                   </div>
@@ -324,27 +324,27 @@
                         <tr>
                           <td class="align-middle"><span class="time">18:00 - 19:45</span></td>
                           <td class="align-middle">
-                            <p class="schedule-movie-name">A Feast With King Midas</p>
+                            <p class="schedule-film-name">A Feast With King Midas</p>
                             <p>By Timo Wright</p>
                           </td>
                         </tr>
                         <tr>
                           <td class="align-middle"><span class="time">19:45 - 21:15</span></td>
                           <td class="align-middle">
-                            <p class="schedule-movie-name">Ja Passou</p>
+                            <p class="schedule-film-name">Ja Passou</p>
                             <p>By Sebastião Salgado, Pedro Patrocínio</p>
                           </td>
                         </tr>
                         <tr>
                           <td class="align-middle"><span class="time">21:15 - 22:15</span></td>
                           <td class="align-middle">
-                            <p class="schedule-movie-name">Break</p>
+                            <p class="schedule-film-name">Break</p>
                           </td>
                         </tr>
                         <tr>
                           <td class="align-middle"><span class="time">22:15 - 00:00</span></td>
                           <td class="align-middle">
-                            <p class="schedule-movie-name">No Necesito</p>
+                            <p class="schedule-film-name">No Necesito</p>
                             <p>By Victoria Garza</p>
                           </td>
                         </tr>
@@ -358,27 +358,27 @@
                         <tr>
                           <td class="align-middle"><span class="time">18:00 - 19:45</span></td>
                           <td class="align-middle">
-                            <p class="schedule-movie-name">#MyEscape</p>
+                            <p class="schedule-film-name">#MyEscape</p>
                             <p>By Elke Sasse</p>
                           </td>
                         </tr>
                         <tr>
                           <td class="align-middle"><span class="time">19:45 - 21:15</span></td>
                           <td class="align-middle">
-                            <p class="schedule-movie-name">2.57k</p>
+                            <p class="schedule-film-name">2.57k</p>
                             <p>By Amber Borotsik, Tony Olivares</p>
                           </td>
                         </tr>
                         <tr>
                           <td class="align-middle"><span class="time">21:15 - 22:15</span></td>
                           <td class="align-middle">
-                            <p class="schedule-movie-name">Break</p>
+                            <p class="schedule-film-name">Break</p>
                           </td>
                         </tr>
                         <tr>
                           <td class="align-middle"><span class="time">22:15 - 00:00</span></td>
                           <td class="align-middle">
-                            <p class="schedule-movie-name">3orthographies</p>
+                            <p class="schedule-film-name">3orthographies</p>
                             <p>By Dominik Pagacz</p>
                           </td>
                         </tr>
@@ -392,27 +392,27 @@
                         <tr>
                           <td class="align-middle"><span class="time">18:00 - 19:45</span></td>
                           <td class="align-middle">
-                            <p class="schedule-movie-name">A Big Love</p>
+                            <p class="schedule-film-name">A Big Love</p>
                             <p>By Simona Rapello and Max Chicco</p>
                           </td>
                         </tr>
                         <tr>
                           <td class="align-middle"><span class="time">19:45 - 21:15</span></td>
                           <td class="align-middle">
-                            <p class="schedule-movie-name">A Bomb (Une Bombe)</p>
+                            <p class="schedule-film-name">A Bomb (Une Bombe)</p>
                             <p>By Guillaume Harvey</p>
                           </td>
                         </tr>
                         <tr>
                           <td class="align-middle"><span class="time">21:15 - 22:15</span></td>
                           <td class="align-middle">
-                            <p class="schedule-movie-name">Break</p>
+                            <p class="schedule-film-name">Break</p>
                           </td>
                         </tr>
                         <tr>
                           <td class="align-middle"><span class="time">22:15 - 00:00</span></td>
                           <td class="align-middle">
-                            <p class="schedule-movie-name">A Circus Tale & A Love Song</p>
+                            <p class="schedule-film-name">A Circus Tale & A Love Song</p>
                             <p>By Demián Bichir</p>
                           </td>
                         </tr>
@@ -426,27 +426,27 @@
                         <tr>
                           <td class="align-middle"><span class="time">18:00 - 19:45</span></td>
                           <td class="align-middle">
-                            <p class="schedule-movie-name">A Done Deal</p>
+                            <p class="schedule-film-name">A Done Deal</p>
                             <p>By Pierre-Marc Drouin & Simon Lamarre-Ledoux</p>
                           </td>
                         </tr>
                         <tr>
                           <td class="align-middle"><span class="time">19:45 - 21:15</span></td>
                           <td class="align-middle">
-                            <p class="schedule-movie-name">A Hard World for Little Things</p>
+                            <p class="schedule-film-name">A Hard World for Little Things</p>
                             <p>By Sonja Bertucci</p>
                           </td>
                         </tr>
                         <tr>
                           <td class="align-middle"><span class="time">21:15 - 22:15</span></td>
                           <td class="align-middle">
-                            <p class="schedule-movie-name">Break</p>
+                            <p class="schedule-film-name">Break</p>
                           </td>
                         </tr>
                         <tr>
                           <td class="align-middle"><span class="time">22:15 - 00:00</span></td>
                           <td class="align-middle">
-                            <p class="schedule-movie-name">A Loft in Paradise (Un loft au Paradis)</p>
+                            <p class="schedule-film-name">A Loft in Paradise (Un loft au Paradis)</p>
                             <p>By Alexandre Lança</p>
                           </td>
                         </tr>
