--- a/src/index.html
+++ b/src/index.html
@@ -459,54 +459,63 @@
             <a name="news" type="hidden" class="section-anchor d-block mb-5"></a>
             <div class="row section-header section-header-right section-news">
               <div class="col col-md-10 shadow-lg">
-                <p class="text-white">News</p>
+                <p class="text-white">News & Announcements</p>
               </div>
             </div>
             <div class="row section-body p-2">
-              <div class="col-md-4">
-                <h2>Section News</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+              <div class="col-md-6">
+                <div class="d-flex align-items-start flex-grow-0">
+                    <img src="./images/film-loft.png" class="news-image" alt="">
+                    <div class="ml-2">
+                      <h6 class="text-primary">The court has decided : A Loft in Paradise will be the BOFF 2019 Closing film!</h6>
+                      <p>We are very pleased that this unique - and in some ways agonising - work in the career of the great director Alexandre Lança will be unveiled for the first time to journalists, festival-goers ... </p>
+                    </div>
+                </div>
               </div>
-              <div class="col-md-4">
-                <h2>Section News</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+              <div class="col-md-6">
+                <div class="d-flex align-items-start flex-grow-0">
+                    <img src="./images/film-loft.png" class="news-image" alt="">
+                    <div class="ml-2">
+                      <h6 class="text-primary">The court has decided : A Loft in Paradise will be the BOFF 2019 Closing film!</h6>
+                      <p>We are very pleased that this unique - and in some ways agonising - work in the career of the great director Alexandre Lança will be unveiled for the first time to journalists, festival-goers ... </p>
+                    </div>
+                </div>
               </div>
-              <div class="col-md-4">
-                <h2>Section News</h2>
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+              <div class="col-md-6">
+                <div class="d-flex align-items-start flex-grow-0">
+                    <img src="./images/film-loft.png" class="news-image" alt="">
+                    <div class="ml-2">
+                      <h6 class="text-primary">The court has decided : A Loft in Paradise will be the BOFF 2019 Closing film!</h6>
+                      <p>We are very pleased that this unique - and in some ways agonising - work in the career of the great director Alexandre Lança will be unveiled for the first time to journalists, festival-goers ... </p>
+                    </div>
+                </div>
               </div>
-              <div class="col-md-4">
-                <h2>Section News</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+              <div class="col-md-6">
+                <div class="d-flex align-items-start flex-grow-0">
+                    <img src="./images/film-loft.png" class="news-image" alt="">
+                    <div class="ml-2">
+                      <h6 class="text-primary">The court has decided : A Loft in Paradise will be the BOFF 2019 Closing film!</h6>
+                      <p>We are very pleased that this unique - and in some ways agonising - work in the career of the great director Alexandre Lança will be unveiled for the first time to journalists, festival-goers ... </p>
+                    </div>
+                </div>
               </div>
-              <div class="col-md-4">
-                <h2>Section News</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+              <div class="col-md-6">
+                <div class="d-flex align-items-start flex-grow-0">
+                    <img src="./images/film-loft.png" class="news-image" alt="">
+                    <div class="ml-2">
+                      <h6 class="text-primary">The court has decided : A Loft in Paradise will be the BOFF 2019 Closing film!</h6>
+                      <p>We are very pleased that this unique - and in some ways agonising - work in the career of the great director Alexandre Lança will be unveiled for the first time to journalists, festival-goers ... </p>
+                    </div>
+                </div>
               </div>
-              <div class="col-md-4">
-                <h2>Section News</h2>
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-              </div>
-              <div class="col-md-4">
-                <h2>Section News</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-              </div>
-              <div class="col-md-4">
-                <h2>Section News</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-              </div>
-              <div class="col-md-4">
-                <h2>Section News</h2>
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+              <div class="col-md-6">
+                <div class="d-flex align-items-start flex-grow-0">
+                    <img src="./images/film-loft.png" class="news-image" alt="">
+                    <div class="ml-2">
+                      <h6 class="text-primary">The court has decided : A Loft in Paradise will be the BOFF 2019 Closing film!</h6>
+                      <p>We are very pleased that this unique - and in some ways agonising - work in the career of the great director Alexandre Lança will be unveiled for the first time to journalists, festival-goers ... </p>
+                    </div>
+                </div>
               </div>
             </div>
             <a name="about" type="hidden" class="section-anchor d-block mb-5"></a>
