--- a/src/index.html
+++ b/src/index.html
@@ -464,8 +464,8 @@
             </div>
             <div class="row section-body p-2">
               <div class="col-md-6">
-                <div class="d-flex align-items-start flex-grow-0">
-                    <img src="./images/film-loft.png" class="news-image" alt="">
+                <div class="news-item d-flex align-items-start flex-grow-0">
+                    <img src="./images/news-0.jpg" class="news-image" alt="">
                     <div class="ml-2">
                       <h6 class="text-primary">The court has decided : A Loft in Paradise will be the BOFF 2019 Closing film!</h6>
                       <p>We are very pleased that this unique - and in some ways agonising - work in the career of the great director Alexandre Lança will be unveiled for the first time to journalists, festival-goers ... </p>
@@ -473,47 +473,47 @@
                 </div>
               </div>
               <div class="col-md-6">
-                <div class="d-flex align-items-start flex-grow-0">
-                    <img src="./images/film-loft.png" class="news-image" alt="">
+                <div class="news-item d-flex align-items-start flex-grow-0">
+                    <img src="./images/news-1.jpg" class="news-image" alt="">
                     <div class="ml-2">
-                      <h6 class="text-primary">The court has decided : A Loft in Paradise will be the BOFF 2019 Closing film!</h6>
+                      <h6 class="text-primary">The Festival stands up</h6>
+                      <p>From Auguest 5 to 8, enjoy live coverage of the event with articles, interviews, photos and videos and experience it in close-up on the dedicated event website! ... </p>
+                    </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="news-item d-flex align-items-start flex-grow-0">
+                    <img src="./images/news-2.jpg" class="news-image" alt="">
+                    <div class="ml-2">
+                      <h6 class="text-primary">Tribute to Pierre Rissient by Thierry Frémaux</h6>
+                      <p>In January 2017 Thierry Frémaut referred several times and at some length to Pierre Rissient, recently deceased. In sorrow, and as a tribute to this admirable cinephile and great friend of  ... </p>
+                    </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="news-item d-flex align-items-start flex-grow-0">
+                    <img src="./images/news-3.jpg" class="news-image" alt="">
+                    <div class="ml-2">
+                      <h6 class="text-primary">The new film of the Star Wars™ galaxy in the Official Selection. </h6>
+                      <p>In 2002, it was Star Wars – Episode II – Attack of the Clones and in 2005, Star Wars: Revenge of the Sith. In 2018, what is one of the greatest legends in the history of cinema returns to the ... </p>
+                    </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="news-item d-flex align-items-start flex-grow-0">
+                    <img src="./images/news-4.jpg" class="news-image" alt="">
+                    <div class="ml-2">
+                      <h6 class="text-primary">A Brief Statement About Big Things</h6>
                       <p>We are very pleased that this unique - and in some ways agonising - work in the career of the great director Alexandre Lança will be unveiled for the first time to journalists, festival-goers ... </p>
                     </div>
                 </div>
               </div>
               <div class="col-md-6">
-                <div class="d-flex align-items-start flex-grow-0">
-                    <img src="./images/film-loft.png" class="news-image" alt="">
+                <div class="news-item d-flex align-items-start flex-grow-0">
+                    <img src="./images/news-5.jpg" class="news-image" alt="">
                     <div class="ml-2">
-                      <h6 class="text-primary">The court has decided : A Loft in Paradise will be the BOFF 2019 Closing film!</h6>
-                      <p>We are very pleased that this unique - and in some ways agonising - work in the career of the great director Alexandre Lança will be unveiled for the first time to journalists, festival-goers ... </p>
-                    </div>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="d-flex align-items-start flex-grow-0">
-                    <img src="./images/film-loft.png" class="news-image" alt="">
-                    <div class="ml-2">
-                      <h6 class="text-primary">The court has decided : A Loft in Paradise will be the BOFF 2019 Closing film!</h6>
-                      <p>We are very pleased that this unique - and in some ways agonising - work in the career of the great director Alexandre Lança will be unveiled for the first time to journalists, festival-goers ... </p>
-                    </div>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="d-flex align-items-start flex-grow-0">
-                    <img src="./images/film-loft.png" class="news-image" alt="">
-                    <div class="ml-2">
-                      <h6 class="text-primary">The court has decided : A Loft in Paradise will be the BOFF 2019 Closing film!</h6>
-                      <p>We are very pleased that this unique - and in some ways agonising - work in the career of the great director Alexandre Lança will be unveiled for the first time to journalists, festival-goers ... </p>
-                    </div>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="d-flex align-items-start flex-grow-0">
-                    <img src="./images/film-loft.png" class="news-image" alt="">
-                    <div class="ml-2">
-                      <h6 class="text-primary">The court has decided : A Loft in Paradise will be the BOFF 2019 Closing film!</h6>
-                      <p>We are very pleased that this unique - and in some ways agonising - work in the career of the great director Alexandre Lança will be unveiled for the first time to journalists, festival-goers ... </p>
+                      <h6 class="text-primary">ReFrame and IMDbPro Announce New Collaboration to Recognize Standout Gender-balanced Film and TV Projects</h6>
+                      <p>Los Angeles, CA — ReFrame™, a coalition of industry professionals and partner companies founded by Women In Film and Sundance Institute whose mission is to increase the number of women of all backgrounds  ... </p>
                     </div>
                 </div>
               </div>
